# quadruped-reactive-walking

./: CMakeLists.txt  README.md
include/qrw/: Controller.hpp  Joystick.hpp
python/: CMakeLists.txt  bindings.cpp
scripts/: config_solo12.yaml
scripts/joystick-launcher/: gepetto-quadruped-reactive-walking.service  joystick-launcher.service
src/: Controller.cpp  control_solo12.cpp  walk_parameters.yaml
